--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "mirotone": "4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
+    "tinycolor2": "^1.6.0"
   },
   "devDependencies": {
-    "vite": "3.0.3",
-    "@vitejs/plugin-react": "^2.2.0"
+    "@vitejs/plugin-react": "^2.2.0",
+    "vite": "3.0.3"
   }
 }
