--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-modal": "^3.16.1",
+    "react-twitter-embed": "^4.0.4",
     "tinycolor2": "^1.6.0"
   },
   "devDependencies": {
