--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-modal": "^3.16.1",
+    "react-router-dom": "^6.11.0",
     "react-twitter-embed": "^4.0.4",
     "tinycolor2": "^1.6.0"
   },
